# Triangular_Billiard

./: .gitignore  CMakeLists.txt  README.md  report.tex
src/: CMakeLists.txt  main.cpp
src/analysis/: Analysis.hpp  Results.hpp  analysis.cpp  analysis.hpp  parameters.cpp  parameters.hpp  results.cpp  results.hpp
src/classes/: Ball.cpp  Ball.hpp  Collision.cpp  Collision.hpp  Pool.cpp  Pool.hpp  System.cpp  System.hpp
src/graphics/: AnalysisWindow.cpp  AnalysisWindow.hpp  AppStyle.cpp  AppStyle.hpp  ConfigSimulation.cpp  ConfigSimulation.hpp  MainWindow.cpp  MainWindow.hpp  Menu.cpp  Menu.hpp  Scene.hpp  SimulationWindow.cpp  SimulationWindow.hpp  analysisWindow.cpp  analysisWindow.hpp  appStyle.cpp  appStyle.hpp  configSimulation.cpp  configSimulation.hpp  errorPopup.cpp  errorPopup.hpp  mainWindow.cpp  mainWindow.hpp  menu.cpp  menu.hpp  scene.hpp  simulationWindow.cpp  simulationWindow.hpp
src/graphics/components/: Legend.cpp  Legend.hpp  LegendItem.cpp  LegendItem.hpp  TextInput.cpp  TextInput.hpp
src/graphics/components/button/: Button.cpp  Button.hpp  button.cpp  button.hpp
src/graphics/components/errorPopup/: errorPopup.cpp  errorPopup.hpp
src/graphics/components/legend/: Legend.cpp  Legend.hpp  legend.cpp  legend.hpp  legendItem.cpp  legendItem.hpp
src/graphics/components/textInput/: TextInput.cpp  TextInput.hpp  textInput.cpp  textInput.hpp
src/graphics/scenes/: analysisWindow.cpp  analysisWindow.hpp  configSimulation.cpp  configSimulation.hpp  menu.cpp  menu.hpp  simulationWindow.cpp  simulationWindow.hpp
src/graphics/style/: appStyle.cpp  appStyle.hpp
src/graphics/utils/: scene.hpp
src/simulation/: Ball.cpp  Ball.hpp  Collision.cpp  Collision.hpp  Pool.cpp  Pool.hpp  System.cpp  System.hpp  ball.cpp  ball.hpp  collision.cpp  collision.hpp  pool.cpp  pool.hpp  system.cpp  system.hpp
src/utils/: concept.hpp
tests/: analysis_tests.cpp  graphics_tests.cpp  simulation_tests.cpp
tests/mock/: mockSystem.cpp  mockSystem.hpp
